--- a/STO Buddy/Base.lproj/Main.storyboard
+++ b/STO Buddy/Base.lproj/Main.storyboard
@@ -34,22 +34,16 @@
                                     <rect key="frame" x="0.0" y="0.0" width="602" height="370.5"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jSt-dm-u5P">
+                                        <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jSt-dm-u5P">
                                             <rect key="frame" x="-238" y="-185" width="0.0" height="0.0"/>
-                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="CQ2-8M-LAH">
+                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="CQ2-8M-LAH">
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <animations/>
-                                                <variation key="widthClass=compact" ambiguous="YES">
-                                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
-                                                </variation>
                                             </view>
                                             <animations/>
                                             <vibrancyEffect>
                                                 <blurEffect style="light"/>
                                             </vibrancyEffect>
-                                            <variation key="widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="-36" y="-95" width="0.0" height="0.0"/>
-                                            </variation>
                                             <variation key="heightClass=compact-widthClass=regular" fixedFrame="YES">
                                                 <rect key="frame" x="-438" y="-143" width="0.0" height="0.0"/>
                                             </variation>
@@ -441,7 +435,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="249" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcp-Fa-oLT">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="249" misplaced="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcp-Fa-oLT">
                                             <rect key="frame" x="16" y="2" width="471" height="26"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
@@ -451,28 +445,30 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             </variation>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zqy-Va-VV9">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" misplaced="YES" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zqy-Va-VV9">
                                             <rect key="frame" x="16" y="28" width="471" height="13.5"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <segmentedControl opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="Xkh-Q0-Jxf">
+                                        <segmentedControl opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="Xkh-Q0-Jxf">
                                             <rect key="frame" x="173" y="8" width="314" height="29"/>
                                             <animations/>
                                             <color key="backgroundColor" red="0.94327950477600098" green="0.98936665058135986" blue="0.99987876415252686" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                                             <segments>
                                                 <segment title="⬅︎" width="44"/>
+                                                <segment title="╳" width="44"/>
                                                 <segment title="★" width="44"/>
                                                 <segment title="🏠" width="44"/>
                                                 <segment title="🏢" width="44"/>
                                                 <segment title="🌲" width="44"/>
-                                                <segment title="" width="44"/>
-                                                <segment title="" width="44"/>
                                             </segments>
+                                            <variation key="widthClass=compact" misplaced="YES">
+                                                <rect key="frame" x="71" y="8" width="224" height="29"/>
+                                            </variation>
                                         </segmentedControl>
-                                        <segmentedControl opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="JUr-Kj-fZ1">
+                                        <segmentedControl opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="JUr-Kj-fZ1">
                                             <rect key="frame" x="495" y="8" width="89" height="29"/>
                                             <animations/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -495,7 +491,7 @@
                                         <constraint firstItem="JUr-Kj-fZ1" firstAttribute="leading" secondItem="Xkh-Q0-Jxf" secondAttribute="trailing" priority="749" constant="8" id="YzX-fJ-kE7"/>
                                         <constraint firstItem="JUr-Kj-fZ1" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Xkh-Q0-Jxf" secondAttribute="trailing" id="dj3-hK-goO"/>
                                         <constraint firstItem="Xkh-Q0-Jxf" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="XTh-CK-WR2" secondAttribute="leadingMargin" id="hdM-tp-30Z"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="JUr-Kj-fZ1" secondAttribute="trailing" priority="748" constant="8" id="j26-xU-qh6"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="JUr-Kj-fZ1" secondAttribute="trailing" priority="748" id="j26-xU-qh6"/>
                                         <constraint firstItem="zqy-Va-VV9" firstAttribute="leading" secondItem="lcp-Fa-oLT" secondAttribute="leading" id="sUb-kc-Qhz"/>
                                         <constraint firstItem="zqy-Va-VV9" firstAttribute="trailing" secondItem="lcp-Fa-oLT" secondAttribute="trailing" id="vLh-ks-Xzs"/>
                                     </constraints>
@@ -680,8 +676,8 @@
                         <rect key="frame" x="0.0" y="44" width="600" height="326.5"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" misplaced="YES" image="bus-large.png" translatesAutoresizingMaskIntoConstraints="NO" id="eBM-3x-gFb">
-                                <rect key="frame" x="20" y="52" width="560" height="310.5"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" image="bus-large.png" translatesAutoresizingMaskIntoConstraints="NO" id="eBM-3x-gFb">
+                                <rect key="frame" x="20" y="8" width="560" height="310.5"/>
                                 <animations/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="At 14:56, walk to stop Saint-René/Ernest-Gaboury Sud (Infobus: 819-778-8149), Gatineau (2 min.)." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fAO-4l-LYm">
