--- a/STO Buddy/Launch Screen.storyboard
+++ b/STO Buddy/Launch Screen.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="3jV-cr-K8X">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="3jV-cr-K8X">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -19,38 +19,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="yhK-ie-cWB">
-                                <rect key="frame" x="20" y="20" width="560" height="580"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="300"/>
-                                <color key="textColor" red="0.93333333330000001" green="0.85882352939999995" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="20" y="133.5" width="560" height="348.5"/>
+                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="300"/>
+                                <color key="textColor" red="0.92941176470588238" green="0.85490196078431369" blue="0.73725490196078436" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.0" green="0.49803921569999998" blue="0.53725490200000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <size key="shadowOffset" width="-1" height="1"/>
                             </label>
                             <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jKI-rZ-qhY">
                                 <rect key="frame" x="0.0" y="375" width="600" height="225"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STO Planner" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="36" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gLO-J2-CV8">
                                         <rect key="frame" x="20" y="8" width="560" height="85"/>
-                                        <animations/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="72"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your daily travel companion." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEz-h0-Jsj">
                                         <rect key="frame" x="20" y="101" width="560" height="17"/>
-                                        <animations/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by lhunath (Maarten Billemont)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4BZ-Ll-CsR">
-                                        <rect key="frame" x="20" y="202.5" width="560" height="14.5"/>
-                                        <animations/>
+                                        <rect key="frame" x="20" y="202" width="560" height="14.5"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                         <color key="textColor" red="0.43921568630000002" green="0.80392156859999997" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.49803921569999998" blue="0.53725490200000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="4BZ-Ll-CsR" firstAttribute="trailing" secondItem="jKI-rZ-qhY" secondAttribute="trailingMargin" id="Das-pg-ZIF"/>
@@ -65,16 +62,14 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <animations/>
-                        <color key="backgroundColor" red="0.20000000000000001" green="0.66274509800000003" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.20000000000000001" green="0.6588235294117647" blue="0.28235294117647058" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="jKI-rZ-qhY" secondAttribute="trailing" id="3D9-eP-4Lf"/>
                             <constraint firstItem="jKI-rZ-qhY" firstAttribute="height" secondItem="gM8-7k-fFv" secondAttribute="height" multiplier="3:8" id="E1v-q8-a9r"/>
                             <constraint firstItem="yhK-ie-cWB" firstAttribute="leading" secondItem="gM8-7k-fFv" secondAttribute="leadingMargin" id="FVi-AK-E0O"/>
-                            <constraint firstItem="yhK-ie-cWB" firstAttribute="top" secondItem="bpL-0s-5Rd" secondAttribute="bottom" id="GT3-z0-ocH"/>
                             <constraint firstAttribute="bottom" secondItem="jKI-rZ-qhY" secondAttribute="bottom" id="Pwf-ij-AFy"/>
-                            <constraint firstItem="3xv-IR-993" firstAttribute="top" secondItem="yhK-ie-cWB" secondAttribute="bottom" id="Zw4-tp-mSM"/>
                             <constraint firstItem="jKI-rZ-qhY" firstAttribute="leading" secondItem="gM8-7k-fFv" secondAttribute="leading" id="tlX-Cn-vIT"/>
+                            <constraint firstItem="yhK-ie-cWB" firstAttribute="centerY" secondItem="jKI-rZ-qhY" secondAttribute="centerY" constant="-180" id="x7q-2B-Av5"/>
                             <constraint firstAttribute="trailingMargin" secondItem="yhK-ie-cWB" secondAttribute="trailing" id="z7g-mf-QwK"/>
                         </constraints>
                     </view>
